// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attachChromeWindow 1`] = `
{
  "chromeSessionId": null,
  "expanded": null,
  "height": 0,
  "open": false,
  "openWindowId": -1,
  "saved": true,
  "savedFolderId": "431",
  "savedTitle": "d3 docs",
  "snapshot": false,
  "tabItems": [
    {
      "key": "_tabItem-528",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "432",
        "bookmarkIndex": 0,
        "title": "API Reference · mbostock/d3 Wiki",
        "url": "https://github.com/mbostock/d3/wiki/API-Reference",
      },
    },
    {
      "key": "_tabItem-529",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "534",
        "bookmarkIndex": 1,
        "title": "D3.js - Data-Driven Documents",
        "url": "http://d3js.org/",
      },
    },
    {
      "key": "_tabItem-530",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "535",
        "bookmarkIndex": 2,
        "title": "Gallery · mbostock/d3 Wiki",
        "url": "https://github.com/mbostock/d3/wiki/Gallery",
      },
    },
    {
      "key": "_tabItem-531",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "536",
        "bookmarkIndex": 3,
        "title": "Tutorials · mbostock/d3 Wiki",
        "url": "https://github.com/mbostock/d3/wiki/Tutorials",
      },
    },
    {
      "key": "_tabItem-532",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "537",
        "bookmarkIndex": 4,
        "title": "Drag + Zoom",
        "url": "http://bl.ocks.org/mbostock/6123708",
      },
    },
    {
      "key": "_tabItem-533",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "613",
        "bookmarkIndex": 5,
        "title": "Focus+Context via Brushing",
        "url": "http://bl.ocks.org/mbostock/1667367",
      },
    },
  ],
  "width": 0,
  "windowType": "",
}
`;

exports[`attachChromeWindow 2`] = `
{
  "chromeSessionId": null,
  "expanded": null,
  "height": 0,
  "open": true,
  "openWindowId": 19,
  "saved": true,
  "savedFolderId": "431",
  "savedTitle": "d3 docs",
  "snapshot": false,
  "tabItems": [
    {
      "key": "_tabItem-540",
      "open": true,
      "openState": {
        "active": true,
        "audible": false,
        "favIconUrl": "https://assets-cdn.github.com/favicon.ico",
        "isSuspended": false,
        "muted": false,
        "openTabId": 20,
        "openTabIndex": 0,
        "pinned": false,
        "title": "API Reference · mbostock/d3 Wiki",
        "url": "https://github.com/mbostock/d3/wiki/API-Reference",
      },
      "saved": true,
      "savedState": {
        "bookmarkId": "432",
        "bookmarkIndex": 0,
        "title": "API Reference · mbostock/d3 Wiki",
        "url": "https://github.com/mbostock/d3/wiki/API-Reference",
      },
    },
    {
      "key": "_tabItem-541",
      "open": true,
      "openState": {
        "active": false,
        "audible": false,
        "isSuspended": false,
        "muted": false,
        "openTabId": 22,
        "openTabIndex": 1,
        "pinned": false,
        "title": "D3.js - Data-Driven Documents",
        "url": "https://d3js.org/",
      },
      "saved": false,
      "savedState": null,
    },
    {
      "key": "_tabItem-542",
      "open": true,
      "openState": {
        "active": false,
        "audible": false,
        "favIconUrl": "https://assets-cdn.github.com/favicon.ico",
        "isSuspended": false,
        "muted": false,
        "openTabId": 24,
        "openTabIndex": 2,
        "pinned": false,
        "title": "Gallery · mbostock/d3 Wiki",
        "url": "https://github.com/mbostock/d3/wiki/Gallery",
      },
      "saved": true,
      "savedState": {
        "bookmarkId": "535",
        "bookmarkIndex": 2,
        "title": "Gallery · mbostock/d3 Wiki",
        "url": "https://github.com/mbostock/d3/wiki/Gallery",
      },
    },
    {
      "key": "_tabItem-543",
      "open": true,
      "openState": {
        "active": false,
        "audible": false,
        "favIconUrl": "https://assets-cdn.github.com/favicon.ico",
        "isSuspended": false,
        "muted": false,
        "openTabId": 26,
        "openTabIndex": 3,
        "pinned": false,
        "title": "Tutorials · mbostock/d3 Wiki",
        "url": "https://github.com/mbostock/d3/wiki/Tutorials",
      },
      "saved": true,
      "savedState": {
        "bookmarkId": "536",
        "bookmarkIndex": 3,
        "title": "Tutorials · mbostock/d3 Wiki",
        "url": "https://github.com/mbostock/d3/wiki/Tutorials",
      },
    },
    {
      "key": "_tabItem-544",
      "open": true,
      "openState": {
        "active": false,
        "audible": false,
        "favIconUrl": "http://bl.ocks.org/favicon.png",
        "isSuspended": false,
        "muted": false,
        "openTabId": 28,
        "openTabIndex": 4,
        "pinned": false,
        "title": "Drag + Zoom - bl.ocks.org",
        "url": "http://bl.ocks.org/mbostock/6123708",
      },
      "saved": true,
      "savedState": {
        "bookmarkId": "537",
        "bookmarkIndex": 4,
        "title": "Drag + Zoom",
        "url": "http://bl.ocks.org/mbostock/6123708",
      },
    },
    {
      "key": "_tabItem-545",
      "open": true,
      "openState": {
        "active": false,
        "audible": false,
        "favIconUrl": "http://bl.ocks.org/favicon.png",
        "isSuspended": false,
        "muted": false,
        "openTabId": 30,
        "openTabIndex": 5,
        "pinned": false,
        "title": "Focus+Context via Brushing - bl.ocks.org",
        "url": "http://bl.ocks.org/mbostock/1667367",
      },
      "saved": true,
      "savedState": {
        "bookmarkId": "613",
        "bookmarkIndex": 5,
        "title": "Focus+Context via Brushing",
        "url": "http://bl.ocks.org/mbostock/1667367",
      },
    },
    {
      "key": "_tabItem-535",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "534",
        "bookmarkIndex": 1,
        "title": "D3.js - Data-Driven Documents",
        "url": "http://d3js.org/",
      },
    },
  ],
  "width": 0,
  "windowType": "normal",
}
`;

exports[`chromeTabWindow 1`] = `
{
  "chromeSessionId": null,
  "expanded": null,
  "height": 957,
  "open": true,
  "openWindowId": 442,
  "saved": false,
  "savedFolderId": "",
  "savedTitle": "",
  "snapshot": false,
  "tabItems": [
    {
      "key": "_tabItem-506",
      "open": true,
      "openState": {
        "active": false,
        "audible": false,
        "favIconUrl": "http://facebook.github.io/react/favicon.ico",
        "isSuspended": false,
        "muted": false,
        "openTabId": 443,
        "openTabIndex": 0,
        "pinned": false,
        "title": "Component API | React",
        "url": "http://facebook.github.io/react/docs/component-api.html",
      },
      "saved": false,
      "savedState": null,
    },
    {
      "key": "_tabItem-507",
      "open": true,
      "openState": {
        "active": false,
        "audible": false,
        "favIconUrl": "http://facebook.github.io/react/favicon.ico",
        "isSuspended": false,
        "muted": false,
        "openTabId": 445,
        "openTabIndex": 1,
        "pinned": false,
        "title": "Tutorial | React",
        "url": "http://facebook.github.io/react/docs/tutorial.html",
      },
      "saved": false,
      "savedState": null,
    },
    {
      "key": "_tabItem-508",
      "open": true,
      "openState": {
        "active": false,
        "audible": false,
        "favIconUrl": "http://cdn.sstatic.net/stackoverflow/img/favicon.ico?v=4f32ecc8f43d",
        "isSuspended": false,
        "muted": false,
        "openTabId": 447,
        "openTabIndex": 2,
        "pinned": false,
        "title": "javascript - Is there any proper way to integrate d3.js graphics into Facebook React application? - Stack Overflow",
        "url": "http://stackoverflow.com/questions/21903604/is-there-any-proper-way-to-integrate-d3-js-graphics-into-facebook-react-applicat",
      },
      "saved": false,
      "savedState": null,
    },
    {
      "key": "_tabItem-509",
      "open": true,
      "openState": {
        "active": false,
        "audible": false,
        "isSuspended": false,
        "muted": false,
        "openTabId": 449,
        "openTabIndex": 3,
        "pinned": false,
        "title": "Flux | Application Architecture for Building User Interfaces",
        "url": "http://facebook.github.io/flux/docs/overview.html#content",
      },
      "saved": false,
      "savedState": null,
    },
    {
      "key": "_tabItem-510",
      "open": true,
      "openState": {
        "active": false,
        "audible": false,
        "favIconUrl": "http://fluxxor.com/favicon.ico",
        "isSuspended": false,
        "muted": false,
        "openTabId": 451,
        "openTabIndex": 4,
        "pinned": false,
        "title": "Fluxxor - Home",
        "url": "http://fluxxor.com/",
      },
      "saved": false,
      "savedState": null,
    },
    {
      "key": "_tabItem-511",
      "open": true,
      "openState": {
        "active": false,
        "audible": false,
        "favIconUrl": "http://facebook.github.io/fixed-data-table/images/favicon-b4fca2450cb5aa407a2e106f42a92838.png",
        "isSuspended": false,
        "muted": false,
        "openTabId": 453,
        "openTabIndex": 5,
        "pinned": false,
        "title": "FixedDataTable",
        "url": "http://facebook.github.io/fixed-data-table/",
      },
      "saved": false,
      "savedState": null,
    },
    {
      "key": "_tabItem-512",
      "open": true,
      "openState": {
        "active": true,
        "audible": false,
        "favIconUrl": "https://www.google.com/images/icons/product/chrome-32.png",
        "isSuspended": false,
        "muted": false,
        "openTabId": 734,
        "openTabIndex": 6,
        "openerTabId": 449,
        "pinned": false,
        "title": "Declare Permissions - Google Chrome",
        "url": "https://developer.chrome.com/extensions/declare_permissions",
      },
      "saved": false,
      "savedState": null,
    },
  ],
  "width": 1258,
  "windowType": "normal",
}
`;

exports[`makeFolderTabWindow 1`] = `
{
  "chromeSessionId": null,
  "expanded": null,
  "height": 0,
  "open": false,
  "openWindowId": -1,
  "saved": true,
  "savedFolderId": "431",
  "savedTitle": "d3 docs",
  "snapshot": false,
  "tabItems": [
    {
      "key": "_tabItem-500",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "432",
        "bookmarkIndex": 0,
        "title": "API Reference · mbostock/d3 Wiki",
        "url": "https://github.com/mbostock/d3/wiki/API-Reference",
      },
    },
    {
      "key": "_tabItem-501",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "534",
        "bookmarkIndex": 1,
        "title": "D3.js - Data-Driven Documents",
        "url": "http://d3js.org/",
      },
    },
    {
      "key": "_tabItem-502",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "535",
        "bookmarkIndex": 2,
        "title": "Gallery · mbostock/d3 Wiki",
        "url": "https://github.com/mbostock/d3/wiki/Gallery",
      },
    },
    {
      "key": "_tabItem-503",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "536",
        "bookmarkIndex": 3,
        "title": "Tutorials · mbostock/d3 Wiki",
        "url": "https://github.com/mbostock/d3/wiki/Tutorials",
      },
    },
    {
      "key": "_tabItem-504",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "537",
        "bookmarkIndex": 4,
        "title": "Drag + Zoom",
        "url": "http://bl.ocks.org/mbostock/6123708",
      },
    },
    {
      "key": "_tabItem-505",
      "open": false,
      "openState": null,
      "saved": true,
      "savedState": {
        "bookmarkId": "613",
        "bookmarkIndex": 5,
        "title": "Focus+Context via Brushing",
        "url": "http://bl.ocks.org/mbostock/1667367",
      },
    },
  ],
  "width": 0,
  "windowType": "",
}
`;
